# Project-wide configuration file, can be used for package metadata and other toll configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments

[metadata]
name = yolov5
version = 6.1.0.dev0
description = Family of object detection architectures and models
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/ultralytics/yolov5
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 license
    Operating System :: OS Independent

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=25
    --color=yes


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    F405  # name may be undefined, or defined from star imports: module
    E402  # module level import not at top of file
    F401  # module imported but unused
    W504  # line break after binary operator
    E127  # continuation line over-indented for visual indent
    W504  # line break after binary operator
    E231  # missing whitespace after ‘,’, ‘;’, or ‘:’
    E501  # line too long
    F403  # ‘from module import *’ used; unable to detect undefined names


[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 120
multi_line_output = 0
